changed it over to a random dog image generator for the week 6 discussion post

--- a/page1.html
+++ b/page1.html
@@ -11,14 +11,11 @@
     <title>Document</title>
   </head>
   <body>
-    <button
-      id="button"
-      type="button">
-      Get Joke
-    </button>
-    <p id="setup"></p>
-    <p id="punchline"></p>
-    <p id="error"></p>
+    <button onClick="getRandomImage()">Click for a random image</button><br />
+    <br />
+    <img
+      id="dogImage"
+      src="https://dog.ceo/img/dog-api-logo.svg" />
   </body>
   <script src="script.js"></script>
 </html>
